sp2/src/objects/myObj__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>myObjs</relationshipLabel>
        <relationshipName>myObjs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>seasons__c</fullName>
        <label>seasons</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>winter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>serailNo__c</fullName>
        <label>serailNo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>myObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>myObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>myObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>